--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://masukomi.github.io/junt/"
 languageCode = "en-us"
 title = "Job + Hunt = Junt"
 theme = "docuapi"
